--- a/web3-clicker-game/package.json
+++ b/web3-clicker-game/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ethers": "^6.13.5",
+    "howler": "^2.2.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
